--- a/minidumper/Cargo.toml
+++ b/minidumper/Cargo.toml
@@ -18,17 +18,17 @@ keywords = ["crash", "minidump", "ipc", "out-of-process"]
 
 [dependencies]
 # Nicer cfg handling
-cfg-if = "1.0"
-crash-context = "0.6"
-libc = "0.2"
+cfg-if.workspace = true
+crash-context.workspace = true
+libc.workspace = true
 # Basic log emitting
 log = "0.4"
 # Minidump writing
-minidump-writer = "0.8"
+minidump-writer = "0.9"
 # Event loop
 polling = "3.2"
 # Nicer locking primitives
-parking_lot = "0.12"
+parking_lot.workspace = true
 # Nicer error creation
 thiserror = "1.0"
 
