Update deny action

--- a/deny.toml
+++ b/deny.toml
@@ -23,7 +23,6 @@ exceptions = [{ allow = ["Unicode-DFS-2016"], name = "unicode-ident" }]
 
 [bans]
 multiple-versions = "deny"
-workspace-duplicates = "deny"
 deny = [
     # Incredibly heavyweight, we should never have a dependency on this
     { name = "windows" },
@@ -37,6 +36,8 @@ skip = [
 ]
 skip-tree = [
 ]
+
+[bans.workspace-dependencies]
 
 [sources]
 unknown-registry = "deny"
