--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ debug = 2
 
 [workspace.dependencies]
 cfg-if = "1.0"
-crash-context = "0.6"
+crash-context = { version = "0.6", path = "crash-context" }
 libc = "0.2"
 mach2 = "0.4"
 parking_lot = "0.12"
