--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -14,10 +14,13 @@ name: CI
 jobs:
   lint:
     name: Lint
-    if: false
     strategy:
       matrix:
-        os: [ubuntu-22.04, windows-2022, macos-14]
+        os:
+          - ubuntu-24.04
+          - windows-2022
+          - macos-14
+          - ubuntu-24.04-arm
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
@@ -41,9 +44,9 @@ jobs:
     strategy:
       matrix:
         os:
-          #- ubuntu-24.04,
-          #- windows-2022,
-          #- macos-14,
+          - ubuntu-24.04
+          - windows-2022
+          - macos-14
           - ubuntu-24.04-arm
     runs-on: ${{ matrix.os }}
     steps:
@@ -58,8 +61,7 @@ jobs:
 
   build-android:
     name: Build sources
-    if: false
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     strategy:
       matrix:
         job:
@@ -86,15 +88,14 @@ jobs:
 
   deny-check:
     name: cargo-deny
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
       - uses: EmbarkStudios/cargo-deny-action@v2
 
   publish-check:
     name: Publish Check
-    if: false
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
@@ -108,7 +109,7 @@ jobs:
           cargo publish --dry-run --manifest-path sadness-generator/Cargo.toml
 
   all:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     needs: [lint, test, build-android, deny-check, publish-check]
     steps:
       - run: echo "All test jobs passed"
