Add testing of aarch64 linux (#96)
* Add testing of aarch64 linux

* Ignore float state for now

* Fix unneccessary stack copy

* Adjust aarch64 error

* Reenable CI

--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -16,7 +16,11 @@ jobs:
     name: Lint
     strategy:
       matrix:
-        os: [ubuntu-22.04, windows-2022, macos-14]
+        os:
+          - ubuntu-24.04
+          - windows-2022
+          - macos-14
+          - ubuntu-24.04-arm
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
@@ -39,7 +43,11 @@ jobs:
     name: Test
     strategy:
       matrix:
-        os: [ubuntu-22.04, windows-2022, macos-14]
+        os:
+          - ubuntu-24.04
+          - windows-2022
+          - macos-14
+          - ubuntu-24.04-arm
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
@@ -47,18 +55,16 @@ jobs:
       - uses: Swatinem/rust-cache@v2
       - run: cargo fetch
       - name: cargo test build
-        run: cargo build --tests
+        run: cargo build --tests --all-features
       - name: cargo test
-        run: cargo test
+        run: cargo test --all-features
 
   build-android:
     name: Build sources
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     strategy:
       matrix:
         job:
-          #- { target: aarch64-unknown-linux-gnu, toolchain: stable }
-          - { target: aarch64-unknown-linux-musl, toolchain: stable }
           - { target: aarch64-linux-android, toolchain: stable }
           - { target: arm-unknown-linux-gnueabihf, toolchain: stable }
     steps:
@@ -82,14 +88,14 @@ jobs:
 
   deny-check:
     name: cargo-deny
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
       - uses: EmbarkStudios/cargo-deny-action@v2
 
   publish-check:
     name: Publish Check
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
@@ -103,7 +109,7 @@ jobs:
           cargo publish --dry-run --manifest-path sadness-generator/Cargo.toml
 
   all:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     needs: [lint, test, build-android, deny-check, publish-check]
     steps:
       - run: echo "All test jobs passed"
