--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,16 @@ members = [
     "sadness-generator",
 ]
 
+[workspace.package]
+repository = "https://github.com/EmbarkStudios/crash-handling"
+authors = [
+    "Embark <opensource@embark-studios.com>",
+    "Jake Shadle <jake.shadle@embark-studios.com>",
+]
+edition = "2024"
+license = "MIT OR Apache-2.0"
+rust-version = "1.85.0"
+
 [profile.dev]
 debug = 2
 
