--- a/crash-context/Cargo.toml
+++ b/crash-context/Cargo.toml
@@ -2,19 +2,16 @@
 name = "crash-context"
 version = "0.6.3"
 description = "Provides portable types containing target specific contextual information at the time of a crash"
-repository = "https://github.com/EmbarkStudios/crash-handling"
-authors = [
-    "Embark <opensource@embark-studios.com>",
-    "Jake Shadle <jake.shadle@embark-studios.com>",
-]
-edition = "2021"
-license = "MIT OR Apache-2.0"
+repository.workspace = true
+authors.workspace = true
+edition.workspace = true
+license.workspace = true
 readme = "README.md"
 documentation = "https://docs.rs/crash-context"
 homepage = "https://github.com/EmbarkStudios/crash-handling/tree/main/crash-context"
 categories = ["external-ffi-bindings"]
 keywords = ["crash", "libc", "getcontext"]
-rust-version = "1.62.0" # We use `global_asm!`
+rust-version.workspace = true
 
 [dependencies]
 # Nicer cfg handling
