--- a/crash-handler/Cargo.toml
+++ b/crash-handler/Cargo.toml
@@ -3,9 +3,9 @@ name = "crash-handler"
 description = "Allows running of user code during crash events"
 repository = "https://github.com/EmbarkStudios/crash-handling"
 version = "0.6.3"
-authors = ["Embark <opensource@embark-studios.com>"]
-edition = "2024"
-license = "MIT OR Apache-2.0"
+authors.workspace = true
+edition.workspace = true
+license.workspace = true
 readme = "README.md"
 documentation = "https://docs.rs/crash-handler"
 homepage = "https://github.com/EmbarkStudios/crash-handling/tree/main/crash-handler"
