--- a/minidumper-test/Cargo.toml
+++ b/minidumper-test/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "minidumper-test"
 version = "0.1.0"
-edition = "2024"
-license = "MIT OR Apache-2.0"
+edition.workspace = true
+license.workspace = true
 publish = false
 
 [[bin]]
