--- a/minidumper/Cargo.toml
+++ b/minidumper/Cargo.toml
@@ -2,13 +2,10 @@
 name = "minidumper"
 version = "0.8.3"
 description = "IPC impl for creating a minidump for a crashed process"
-repository = "https://github.com/EmbarkStudios/crash-handling"
-authors = [
-    "Embark <opensource@embark-studios.com>",
-    "Jake Shadle <jake.shadle@embark-studios.com>",
-]
-edition = "2024"
-license = "MIT OR Apache-2.0"
+repository.workspace = true
+authors.workspace = true
+edition.workspace = true
+license.workspace = true
 readme = "README.md"
 documentation = "https://docs.rs/minidumper"
 homepage = "https://github.com/EmbarkStudios/crash-handling/tree/main/minidumper"
