--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -67,6 +67,7 @@ jobs:
         job:
           - { target: aarch64-linux-android, toolchain: stable }
           - { target: arm-unknown-linux-gnueabihf, toolchain: stable }
+          - { target: s390x-unknown-linux-gnu, toolchain: stable }
     steps:
       - uses: actions/checkout@v4
       - name: Install Rust
