--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ debug = 2
 [workspace.dependencies]
 cfg-if = "1.0"
 crash-context = "0.6"
-libc = "0.2"
+libc = ">=0.2.180"
 # This is an older version, but most of the larger dependents (eg wasmtime) are
 # still using 0.4 as well, so we don't want to bump this until someone actually
 # opens a PR to avoid unnecessary duplicates
